finished design welcome

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,50 @@
-<p>welcome works!</p>
+<h1 class="nunito-sans-bold">Personal Finance Dashboard</h1>
+<button class="nunito-sans-bold">Get Started Now</button>
+<div>
+  <p class="nunito-sans-bold">Demo & Usage:</p>
+  <ul>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Explore with the Demo:</span>
+      Navigate through the app using the navigation bar to see how 
+      each section functions. Play around with the provided demo 
+      data to get a feel for how the app works and how data updates 
+      in real-time.
+    </li>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Secure Your Data:</span>
+      This dashboard prioritizes security. You don't need to 
+      link your real bank accounts. Instead, you can enter your 
+      own financial information to create a personalized experience.
+    </li>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Save Your Progress:</span>
+      Create an account to save your data to the project's 
+      Firebase database. This allows you to pick up where you 
+      left off when you log in next time.
+    </li>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Easy Management:</span>
+      Manage your accounts and transactions seamlessly. Simply 
+      click the respective buttons at the top of each page to 
+      create new entries or modify existing ones.
+    </li>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Informative Tooltips:</span>
+      Some buttons display tooltips with additional options before 
+      taking action. This helps you choose the most precise action 
+      you want to perform.
+    </li>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Safe Transaction Deletion:</span>
+      You can delete and reverse transactions by simply clicking them. 
+      In case you clicked one by accident, don't worry, the app will 
+      ask you for confirmation before deleting it.
+    </li>
+    <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Built-in Safety Net:</span>
+      Feel free to explore! The app provides helpful prompts to 
+      catch potential errors before they happen, allowing you 
+      to make informed decisions.
+    </li>
+  </ul>
+</div>
