added router link for auth form

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <h1 class="nunito-sans-bold">Personal Finance Dashboard</h1>
-<button class="nunito-sans-bold">Get Started Now</button>
+<button routerLink="/auth-form" class="nunito-sans-bold">Get Started Now</button>
 <div>
   <p class="nunito-sans-bold">Demo & Usage:</p>
   <ul>
