added basic positioning

--- a/src/app/auth-form/auth-form.component.html
+++ b/src/app/auth-form/auth-form.component.html
@@ -1,1 +1,14 @@
-<p>auth-form works!</p>
+<div class="form-container">
+
+  <form>
+    <h1>Sign Up</h1>
+    <div>
+      <label for="email">Email</label>
+      <input type="text" id="email" placeholder="example@gmail.com">
+      <label for="password">Password</label>
+      <input type="text" id="password" placeholder="examplepassword">
+    </div>
+    <button>Sign Up</button>
+    <p>Already have an account? <span>Log In</span></p>
+  </form>
+</div>
