added handler for change form

--- a/src/app/auth-form/auth-form.component.html
+++ b/src/app/auth-form/auth-form.component.html
@@ -30,7 +30,7 @@
     </button>
     <p class="nunito-sans-regular">
       {{ isSignUp ? 'Already' : 'Don\'t' }} have an account? 
-      <span class="nunito-sans-bold" tabindex="0" (keydown)="onChangeForm($event)">
+      <span class="nunito-sans-bold" tabindex="0" (click)="onChangeForm()" (keydown)="handleChangeForm($event)">
         {{ isSignUp ? 'Sign In' : 'Sign Up' }}
       </span>
     </p>
