--- a/src/app/auth-form/auth-form.component.css
+++ b/src/app/auth-form/auth-form.component.css
@@ -64,7 +64,7 @@ button {
   cursor: pointer;
 }
 
-p {
+.bottom-text {
   text-align: center;
   font-size: 25px;
   color: var(--secondary);
@@ -73,6 +73,53 @@ p {
 span {
   text-decoration: underline;
   cursor: pointer;
+}
+
+/* ALERT STYLES */
+.alert-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 50%);
+}
+
+.alert {
+  width: 700px;
+  height: fit-content;
+  margin: 30px;
+  padding: 60px;
+  background-color: var(--primary);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+  border: 3px solid var(--main);
+  border-radius: 15px;
+  position: relative;
+}
+
+i {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 50px;
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+.alert-name {
+  margin-bottom: 10px;
+  font-size: 35px;
+  color: var(--secondary);
+}
+
+.alert-msg {
+  font-size: 30px;
+  color: var(--secondary);
 }
 
 
@@ -102,7 +149,26 @@ span {
     font-size: 30px;
   }
   
-  p {
+  .bottom-text {
     font-size: 20px;
+  }
+
+  /* ALERT STYLES */
+  .alert {
+    width: 500px;
+    padding: 30px;
+    padding-top: 60px;
+  }
+  
+  i {
+    font-size: 50px;
+  }
+  
+  .alert-name {
+    font-size: 30px;
+  }
+
+  .alert-msg {
+    font-size: 25px;
   }
 }
