--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -34,6 +34,7 @@ header {
   justify-content: space-between;
   background-color: var(--primary);
   transform-origin: left;
+  z-index: 10;
 }
 
 nav, nav > div {
