--- a/src/app/main-accounts/main-accounts.component.html
+++ b/src/app/main-accounts/main-accounts.component.html
@@ -1,1 +1,24 @@
-<p>main-accounts works!</p>
+<div>
+  <button class="nunito-sans-bold manage-btn">Manage accounts</button>
+</div>
+<div class="cards-container">
+  <div class="card">
+    <h1 class="nunito-sans-bold">SAVINGS</h1>
+    <p class="nunito-sans-regular">100.000.000</p>
+    <button class="nunito-sans-bold show-btn">Show transactions</button>
+  </div>
+  <div class="card">
+    <h1 class="nunito-sans-bold">BUDGET</h1>
+    <p class="nunito-sans-regular">100.000.000</p>
+    <button class="nunito-sans-bold show-btn">Show transactions</button>
+  </div>
+  <div class="card">
+    <h1 class="nunito-sans-bold">GOAL</h1>
+    <div class="goal">
+      <p class="nunito-sans-regular">100.000.000</p>
+      <hr>
+      <p class="nunito-sans-regular">100.000.000</p>
+    </div>
+    <button class="nunito-sans-bold show-btn">Show transactions</button>
+  </div>
+</div>
