changed class name for cards text

--- a/src/app/main-accounts/main-accounts.component.html
+++ b/src/app/main-accounts/main-accounts.component.html
@@ -4,20 +4,20 @@
 <div class="cards-container">
   <div class="card">
     <h1 class="nunito-sans-bold">SAVINGS</h1>
-    <p class="nunito-sans-regular">100.000.000</p>
+    <p class="nunito-sans-regular text">100.000.000</p>
     <button class="nunito-sans-bold show-btn">Show transactions</button>
   </div>
   <div class="card">
     <h1 class="nunito-sans-bold">BUDGET</h1>
-    <p class="nunito-sans-regular">100.000.000</p>
+    <p class="nunito-sans-regular text">100.000.000</p>
     <button class="nunito-sans-bold show-btn">Show transactions</button>
   </div>
   <div class="card">
     <h1 class="nunito-sans-bold">GOAL</h1>
     <div class="goal">
-      <p class="nunito-sans-regular">100.000.000</p>
+      <p class="nunito-sans-regular text">100.000.000</p>
       <hr>
-      <p class="nunito-sans-regular">100.000.000</p>
+      <p class="nunito-sans-regular text">100.000.000</p>
     </div>
     <button class="nunito-sans-bold show-btn">Show transactions</button>
   </div>
