--- a/src/app/main-accounts/main-accounts.component.html
+++ b/src/app/main-accounts/main-accounts.component.html
@@ -1,5 +1,14 @@
-<div>
+<div class="section-button-container">
   <button class="nunito-sans-bold manage-btn">Manage accounts</button>
+  <div class="popup">
+    <div class="popup-content">
+      <p class="nunito-sans-bold popup-text">savings</p>
+      <hr class="popup-hr">
+      <p class="nunito-sans-bold popup-text">budget</p>
+      <hr class="popup-hr">
+      <p class="nunito-sans-bold popup-text">goal</p>
+    </div>
+  </div>
 </div>
 <div class="cards-container">
   <div class="card">
@@ -16,7 +25,7 @@
     <h1 class="nunito-sans-bold">GOAL</h1>
     <div class="goal">
       <p class="nunito-sans-regular text">100.000.000</p>
-      <hr>
+      <hr class="card-hr">
       <p class="nunito-sans-regular text">100.000.000</p>
     </div>
     <button class="nunito-sans-bold show-btn">Show transactions</button>
