added and positioned popup to all elements

--- a/src/app/main-accounts/main-accounts.component.html
+++ b/src/app/main-accounts/main-accounts.component.html
@@ -1,6 +1,6 @@
 <div class="section-button-container">
   <button class="nunito-sans-bold manage-btn">Manage accounts</button>
-  <div class="popup">
+  <div class="popup section-popup">
     <div class="popup-content">
       <p class="nunito-sans-bold popup-text">savings</p>
       <hr class="popup-hr">
@@ -14,12 +14,34 @@
   <div class="card">
     <h1 class="nunito-sans-bold">SAVINGS</h1>
     <p class="nunito-sans-regular text">100.000.000</p>
-    <button class="nunito-sans-bold show-btn">Show transactions</button>
+    <div class="card-button-container">
+      <button class="nunito-sans-bold show-btn">Show transactions</button>
+      <div class="popup card-popup">
+        <div class="popup-content">
+          <p class="nunito-sans-bold popup-text">savings</p>
+          <hr class="popup-hr">
+          <p class="nunito-sans-bold popup-text">budget</p>
+          <hr class="popup-hr">
+          <p class="nunito-sans-bold popup-text">goal</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="card">
     <h1 class="nunito-sans-bold">BUDGET</h1>
     <p class="nunito-sans-regular text">100.000.000</p>
-    <button class="nunito-sans-bold show-btn">Show transactions</button>
+    <div class="card-button-container">
+      <button class="nunito-sans-bold show-btn">Show transactions</button>
+      <div class="popup card-popup">
+        <div class="popup-content">
+          <p class="nunito-sans-bold popup-text">savings</p>
+          <hr class="popup-hr">
+          <p class="nunito-sans-bold popup-text">budget</p>
+          <hr class="popup-hr">
+          <p class="nunito-sans-bold popup-text">goal</p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="card">
     <h1 class="nunito-sans-bold">GOAL</h1>
@@ -28,6 +50,17 @@
       <hr class="card-hr">
       <p class="nunito-sans-regular text">100.000.000</p>
     </div>
-    <button class="nunito-sans-bold show-btn">Show transactions</button>
+    <div class="card-button-container">
+      <button class="nunito-sans-bold show-btn">Show transactions</button>
+      <div class="popup card-popup">
+        <div class="popup-content">
+          <p class="nunito-sans-bold popup-text">savings</p>
+          <hr class="popup-hr">
+          <p class="nunito-sans-bold popup-text">budget</p>
+          <hr class="popup-hr">
+          <p class="nunito-sans-bold popup-text">goal</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
