--- a/src/app/main-accounts/main-accounts.component.css
+++ b/src/app/main-accounts/main-accounts.component.css
@@ -1,11 +1,11 @@
 .section-button-container {
-  margin: 60px 120px;
+  margin: 60px auto 120px auto;
   position: relative;
+  width: max-content;
 }
 
 .manage-btn {
   display: flex;
-  margin: auto;
   height: 80px;
   padding: 10px 20px;
   font-size: 45px;
@@ -81,6 +81,7 @@ h1 {
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
   position: absolute;
+  top: 125%;
 }
 
 .popup-content {
@@ -114,6 +115,18 @@ h1 {
   color: #F7F9FC;
 }
 
+.section-popup {
+  left: 25%;
+}
+
+.card-button-container {
+  position: relative;
+}
+
+.card-popup {
+  left: 25%;
+}
+
 /* MEDIA QUERIES */
 @media (width <= 1729px) {
   .cards-container {
@@ -122,6 +135,10 @@ h1 {
   
   .card {
     width: 400px;
+  }
+
+  .card-popup {
+    left: 21%;
   }
 }
 
@@ -152,11 +169,19 @@ h1 {
     height: 70px;
     font-size: 25px;
   }
+
+  .section-popup {
+    left: 22%;
+  }
+
+  .card-popup {
+    left: 16%;
+  }
 }
 
 @media (width <= 1069px) {
   .section-button-container {
-    margin: 60px;
+    margin: 60px auto 60px auto;
   }
 
   .manage-btn {
@@ -184,6 +209,18 @@ h1 {
   .show-btn {
     height: 60px;
     font-size: 20px;
+  }
+
+  .popup {
+    top: 130%;
+  }
+
+  .section-popup {
+    left: 14%;
+  }
+
+  .card-popup {
+    left: 9%;
   }
 }
 
