--- a/src/app/auth-form/auth-form.component.css
+++ b/src/app/auth-form/auth-form.component.css
@@ -63,6 +63,10 @@ button {
   cursor: pointer;
 }
 
+button:disabled {
+  opacity: 50%;
+}
+
 .bottom-text {
   text-align: center;
   font-size: 25px;
