--- a/src/app/main-accounts/main-accounts.component.css
+++ b/src/app/main-accounts/main-accounts.component.css
@@ -127,6 +127,83 @@ h1 {
   left: 25%;
 }
 
+/* FORM STYLES */
+.form-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding-left: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 50%);
+  z-index: 10;
+}
+
+form {
+  width: 700px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  padding: 60px;
+  background-color: var(--primary);
+  border: 3px solid var(--main);
+  border-radius: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+  position: relative;
+}
+
+i {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 50px;
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+.form-inputs {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+label {
+  margin-bottom: 10px;
+  font-size: 35px;
+  color: var(--secondary);
+}
+
+input {
+  height: 70px;
+  margin-bottom: 30px;
+  padding: 10px 20px;
+  font-size: 30px;
+  color: var(--primary);
+  background-color: var(--secondary);
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+}
+
+.form-btn {
+  height: 80px;
+  padding: 10px 20px;
+  font-size: 35px;
+  color: #F7F9FC;
+  background-color: var(--main);
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+  cursor: pointer;
+}
+
+.form-btn:disabled {
+  opacity: 50%;
+}
+
 /* MEDIA QUERIES */
 @media (width <= 1729px) {
   .cards-container {
@@ -176,6 +253,37 @@ h1 {
 
   .card-popup {
     left: 16%;
+  }
+}
+
+@media (width <= 1479px) {
+  .form-container {
+    padding-left: 200px;
+  }
+}
+
+@media (width <= 1279px) {
+  .form-container {
+    padding-left: 0px;
+  }
+  
+  form {
+    width: 500px;
+    padding: 30px;
+  }
+  
+  label {
+    font-size: 30px;
+  }
+  
+  input {
+    height: 60px;
+    font-size: 25px;
+  }
+  
+  .form-btn {
+    height: 70px;
+    font-size: 30px;
   }
 }
 
