--- a/src/app/main-accounts/main-accounts.component.html
+++ b/src/app/main-accounts/main-accounts.component.html
@@ -3,11 +3,11 @@
   @if(popup === 1) {
     <div class="popup section-popup">
       <div class="popup-content">
-        <p class="nunito-sans-bold popup-text">savings</p>
+        <p class="nunito-sans-bold popup-text" (click)="onOpenForm('savings')">savings</p>
         <hr class="popup-hr">
-        <p class="nunito-sans-bold popup-text">budget</p>
+        <p class="nunito-sans-bold popup-text" (click)="onOpenForm('budget')">budget</p>
         <hr class="popup-hr">
-        <p class="nunito-sans-bold popup-text">goal</p>
+        <p class="nunito-sans-bold popup-text" (click)="onOpenForm('goal')">goal</p>
       </div>
     </div>
   }
@@ -15,7 +15,7 @@
 <div class="cards-container">
   <div class="card">
     <h1 class="nunito-sans-bold">SAVINGS</h1>
-    <p class="nunito-sans-regular text">100.000.000</p>
+    <p class="nunito-sans-regular text">{{ savings }}</p>
     <div class="card-button-container">
       <button class="nunito-sans-bold show-btn" (click)="onShowPopup(2)">Show transactions</button>
       @if(popup === 2) {
@@ -33,7 +33,7 @@
   </div>
   <div class="card">
     <h1 class="nunito-sans-bold">BUDGET</h1>
-    <p class="nunito-sans-regular text">100.000.000</p>
+    <p class="nunito-sans-regular text">{{ budget }}</p>
     <div class="card-button-container">
       <button class="nunito-sans-bold show-btn" (click)="onShowPopup(3)">Show transactions</button>
       @if(popup === 3) {
@@ -52,9 +52,9 @@
   <div class="card">
     <h1 class="nunito-sans-bold">GOAL</h1>
     <div class="goal">
-      <p class="nunito-sans-regular text">100.000.000</p>
+      <p class="nunito-sans-regular text">{{ goal }}</p>
       <hr class="card-hr">
-      <p class="nunito-sans-regular text">100.000.000</p>
+      <p class="nunito-sans-regular text">{{ goalTarget }}</p>
     </div>
     <div class="card-button-container">
       <button class="nunito-sans-bold show-btn" (click)="onShowPopup(4)">Show transactions</button>
@@ -72,10 +72,10 @@
     </div>
   </div>
 </div>
-@if(true) {
+@if(formType === 'savings' || formType === 'budget' || formType === 'goal') {
   <div class="form-container">
-    <form (ngSubmit)="onSubmit()" #form="ngForm">
-      <i class="fa-solid fa-xmark"></i>
+    <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+      <i class="fa-solid fa-xmark" (click)="onCloseForm()"></i>
       <div class="form-inputs">
         <label class="nunito-sans-semibold" for="balance">Balance</label>
         <input 
@@ -87,7 +87,7 @@
           [(ngModel)]="balance" 
           name="balance"
           required>
-        @if(true) {
+        @if(formType === 'goal') {
           <label class="nunito-sans-semibold" for="target-balance">Target balance</label>
           <input 
             class="nunito-sans-regular"
